--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,8 +21,8 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: arnewaschenbach
+        password: ${{ secrets.GHCR_PAT }}
 
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
