--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -12,6 +12,8 @@ spec:
       labels:
         app: nomnomnom
     spec:
+      imagePullSecrets:
+        - name: ghcr-login
       containers:
         - name: nomnomnom
           image: ghcr.io/arnewaschenbach/nomnomnom:latest
