--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: arnewaschenbach/nomnomnom:latest
+        tags: exod0s/nomnomnom:latest
 
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
