--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
       with:
-        context: .
+        context: 
         push: true
-        tags: arnewaschenbach/nomnomnom:latest
+        tags: exod0s/nomnomnom:latest
